Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65357

qtbase build failed for b2qt developer build(warnings being treated as errors)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.11.0
    • 5.11
    • Network
    • None
    • Linux QEMU (gcc-armv7) on Linux Ubuntu_16_04 (gcc-x86_64) - DeveloperBuild, AbortTestingOnFirstFailure
    • 54519d7327014491a7f52ba8d40c884ed896e26e

    Description

      https://codereview.qt-project.org/#/c/211887/ Merge remote-tracking branch 'origin/5.10' into dev
      https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1513757126
      https://testresults.qt.io/logs/qt/qtbase/fe2492e1692156d2b2157c412d019c1604363047/LinuxUbuntu_16_04x86_64LinuxQEMUarmv7GCCqtci-linux-Ubuntu-16.04-x86_64-1-0f5a79DeveloperBuild/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1513757185/log.txt.gz

      /opt/yocto-armv7/sysroots/x86_64-pokysdk-linux/usr/bin/arm-poky-linux-gnueabi/arm-poky-linux-gnueabi-g++ -c -include .pch/Qt5Network -pipe -march=armv7-a -mfpu=neon -DLINUX=1 -mfloat-abi=hard --sysroot=/opt/yocto-armv7/sysroots/armv7ahf-neon-poky-linux-gnueabi -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_USE_SYSTEM_PROXIES -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_NETWORK_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_CORE_LIB -I. -Ikernel -I../../include -I../../include/QtNetwork -I../../include/QtNetwork/5.11.0 -I../../include/QtNetwork/5.11.0/QtNetwork -I../../include/QtCore/5.11.0 -I../../include/QtCore/5.11.0/QtCore -I../../include/QtCore -I.moc -I../../mkspecs/devices/linux-imx7-g++ -o .obj/qtcpsocket.o socket/qtcpsocket.cpp
      kernel/qnetworkinterface_linux.cpp: In instantiation of ‘void {anonymous}::ProcessNetlinkRequest<Lambda>::operator()(int, nlmsghdr*, char*, size_t, Lambda&&) [with Lambda = getInterfaces(int, char*)::<lambda(ifinfomsg*, size_t)>; size_t = unsigned int]’:
      kernel/qnetworkinterface_linux.cpp:216:36:   required from ‘void {anonymous}::processNetlinkRequest(int, nlmsghdr*, char*, size_t, Lambda&&) [with Lambda = getInterfaces(int, char*)::<lambda(ifinfomsg*, size_t)>; size_t = unsigned int]’
      kernel/qnetworkinterface_linux.cpp:319:6:   required from here
      kernel/qnetworkinterface_linux.cpp:161:48: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
               if (send(sock, hdr, hdr->nlmsg_len, 0) != hdr->nlmsg_len)
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
      kernel/qnetworkinterface_linux.cpp: In instantiation of ‘void {anonymous}::ProcessNetlinkRequest<Lambda>::operator()(int, nlmsghdr*, char*, size_t, Lambda&&) [with Lambda = getAddresses(int, char*, QList<QNetworkInterfacePrivate*>&)::<lambda(ifaddrmsg*, size_t)>; size_t = unsigned int]’:
      kernel/qnetworkinterface_linux.cpp:216:36:   required from ‘void {anonymous}::processNetlinkRequest(int, nlmsghdr*, char*, size_t, Lambda&&) [with Lambda = getAddresses(int, char*, QList<QNetworkInterfacePrivate*>&)::<lambda(ifaddrmsg*, size_t)>; size_t = unsigned int]’
      kernel/qnetworkinterface_linux.cpp:423:6:   required from here
      kernel/qnetworkinterface_linux.cpp:161:48: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
      /opt/yocto-armv7/sysroots/x86_64-pokysdk-linux/usr/bin/arm-poky-linux-gnueabi/arm-poky-linux-gnueabi-g++ -c -include .pch/Qt5Network -pipe -march=armv7-a -mfpu=neon -DLINUX=1 -mfloat-abi=hard --sysroot=/opt/yocto-armv7/sysroots/armv7ahf-neon-poky-linux-gnueabi -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_USE_SYSTEM_PROXIES -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_NETWORK_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_CORE_LIB -I. -Ikernel -I../../include -I../../include/QtNetwork -I../../include/QtNetwork/5.11.0 -I../../include/QtNetwork/5.11.0/QtNetwork -I../../include/QtCore/5.11.0 -I../../include/QtCore/5.11.0/QtCore -I../../include/QtCore -I.moc -I../../mkspecs/devices/linux-imx7-g++ -o .obj/qudpsocket.o socket/qudpsocket.cpp
      /home/qt/work/qt/qtbase/bin/moc -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_USE_SYSTEM_PROXIES -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_NETWORK_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_CORE_LIB --include .moc/moc_predefs.h -I/home/qt/work/qt/qtbase/mkspecs/devices/linux-imx7-g++ -I/home/qt/work/qt/qtbase/src/network -I/home/qt/work/qt/qtbase/src/network/kernel -I/home/qt/work/qt/qtbase/include -I/home/qt/work/qt/qtbase/include/QtNetwork -I/home/qt/work/qt/qtbase/include/QtNetwork/5.11.0 -I/home/qt/work/qt/qtbase/include/QtNetwork/5.11.0/QtNetwork -I/home/qt/work/qt/qtbase/include/QtCore/5.11.0 -I/home/qt/work/qt/qtbase/include/QtCore/5.11.0/QtCore -I/home/qt/work/qt/qtbase/include/QtCore -I/opt/yocto-armv7/sysroots/x86_64-pokysdk-linux/usr/lib/arm-poky-linux-gnueabi/gcc/arm-poky-linux-gnueabi/6.3.0/include -I/opt/yocto-armv7/sysroots/x86_64-pokysdk-linux/usr/lib/arm-poky-linux-gnueabi/gcc/arm-poky-linux-gnueabi/6.3.0/include-fixed socket/qtcpserver.h -o .moc/moc_qtcpserver.cpp
      /opt/yocto-armv7/sysroots/x86_64-pokysdk-linux/usr/bin/arm-poky-linux-gnueabi/arm-poky-linux-gnueabi-g++ -c -include .pch/Qt5Network -pipe -march=armv7-a -mfpu=neon -DLINUX=1 -mfloat-abi=hard --sysroot=/opt/yocto-armv7/sysroots/armv7ahf-neon-poky-linux-gnueabi -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_USE_SYSTEM_PROXIES -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_NETWORK_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_CORE_LIB -I. -Ikernel -I../../include -I../../include/QtNetwork -I../../include/QtNetwork/5.11.0 -I../../include/QtNetwork/5.11.0/QtNetwork -I../../include/QtCore/5.11.0 -I../../include/QtCore/5.11.0/QtCore -I../../include/QtCore -I.moc -I../../mkspecs/devices/linux-imx7-g++ -o .obj/qsocks5socketengine.o socket/qsocks5socketengine.cpp
      cc1plus: all warnings being treated as errors
      Makefile:26401: recipe for target '.obj/qnetworkinterface_linux.o' failed
      make[2]: *** [.obj/qnetworkinterface_linux.o] Error 1
      make[2]: *** Waiting for unfinished jobs....
      

      And qtbase dev is blocked by this issue too, I think.

      Attachments

        For Gerrit Dashboard: QTBUG-65357
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes